fixed the css for the card flip as well as added alt="" behind each image in the index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,9 +32,16 @@ nav {
 }
 
 .nav-link {
-	font-size: 20px;
+    font-size: 20px;
 }
 
+.nav-item a:hover {
+    text-shadow: 1px 1px #000000;
+}
+
+.active:link {
+    text-decoration: underline;
+}
 /*------------------------------ Carousel Section*/
 
 #myCarousel img {
@@ -94,20 +101,20 @@ nav {
     position: absolute;
     width: 100%;
     height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
 }
 
 /* The display for the back of the card */
 .flip-back {
     font-family: "Yatra One", sans-serif;
     padding: 15px;
-    width: 100%;
-    height: 100%;
     background-color: #f8c8a0;
     color: #000000;
     transform: rotateY(180deg);
 }
 
-/*  */
+/* The paragraph styling for the back of the card */
 .flip-back p {
     margin-top: 30px;
     font-family: "kalam", sans-serif;
@@ -143,7 +150,7 @@ nav {
 }
 
 .form-control {
-	margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .contact-body {
@@ -236,115 +243,3 @@ nav {
     text-align: center;
 }
 
-@media only screen and (max-width: 1024px) {
-
-    .navbar-brand {
-        padding-right: 325px;
-    }
-
-    .card-img {
-        width: 250px;
-        height: 350px;
-    }
-
-    .flip-card {
-        width: 250px;
-        height: 350px;
-    }
-
-    .contact-title {
-        font-family: "Yatra One", sans-serif;
-        text-align: center;
-        font-size: 30px;
-    }
-
-    .contact-heading {
-        font-size: 20px;
-    }
-}
-
-@media only screen and (max-width: 768px) {
-
-    .navbar-brand {
-        padding-right: 80px;
-    }
-
-    #myCarousel img {
-        height: 80vh;
-        width: 100%;
-    }
-
-    .last-card {
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 425px) {
-    #myCarousel img {
-        height: 50vh;
-        width: 100%;
-    }
-
-    .homepage-title {
-        font-size: 30px;
-    }
-
-    .description p {
-        margin: 0;
-    }
-
-    .main-body {
-        margin: 0;
-    }
-
-    .card-img {
-        width: 300px;
-        height: 400px;
-    }
-
-    .flip-card {
-        width: 300px;
-        height: 400px;
-    }
-
-    .last-card {
-        display: initial;
-    }
-
-    .social-media h4,
-    .contact-us h4 {
-        margin-top: 40px;
-    }
-}
-
-@media only screen and (max-width: 375px) {
-    .navbar-brand{
-        margin: 0;
-        padding: 0;
-    }
-
-    #myCarousel img {
-        height: 40vh;
-        width: 100%;
-    }
-
-    .homepage-title {
-        font-size: 25px;
-    }
-
-    .description p {
-        font-size: 18px;
-    }
-}
-
-@media only screen and (max-width: 320px) {
-    .card-img {
-        width: 250px;
-        height: 350px;
-    }
-
-    .flip-card {
-        width: 250px;
-        height: 350px;
-    }
-}
